Fixed: Cursor not visible in all Bible editors in Chrome/chromium
https://github.com/bibledit/cloud/issues/541

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -626,3 +626,8 @@ table.interlinear.rtl {
   width: 100%;
   height: 8px;
 }
+
+.ql-editor, .bibleeditor {
+  padding: 4px 4px;
+}
+
